--- a/css/contact.css
+++ b/css/contact.css
@@ -7,6 +7,14 @@ body{
     font-size: 16px;
 
 }
+.custom-button{
+    padding:15px 40px;
+     color: white;
+     /* border: 2px solid red; */
+   background: crimson;
+   /* font-size: 16px; */
+}
+
 .header{
     font-weight: 700;
 }
