--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@ body{
     font-family: 'Nunito', sans-serif;
 }
 
+.programs-box:hover{
+    box-shadow: 1px 3px 5px rgba(0,0,0, 0.5);
+}
 .custom-font{
     font-family: 'Lora', serif;
 }
