--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ body{
     /* background-color: grey;
     min-height: 300px; */
     min-height: 300px;
-    background-image: linear-gradient(rgba(0,0,0, 0.5), rgba(0,0,0,0.9)), url("../img/ivan-aleksic-PDRFeeDniCk-unsplash.jpg");
+    background-image: linear-gradient(rgba(0,0,0, 0.5), rgba(0,0,0,0.9)), url("../img/children.jfif");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
